# VpC

./: .gitignore  README.md  TP3.ipynb  pyproject.toml
Material_TPs/TP1/: README.md  TP1.ipynb
Material_TPs/TP2/: README.md  TP2-v2.ipynb  TP2.ipynb
Material_TPs/TP3/: README.md  TP3.ipynb
